--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -53,12 +53,16 @@
       width: 100%;
       margin: 0 auto 30px;
       display: flex;
-      justify-content: space-between;
+    
 
       .text-content {
         width: 100%;
         margin-bottom: 30px;
-        display: column;
+        padding-left: 203px;
+        
+        h2 {
+          margin-left: 105px;
+        }
 
         .btn {
           .button-cta(400px, @button-main, @font-color, center, 1.8rem, 40px, 10px);
